--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -9,6 +13,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 build/
+chroot/
 develop-eggs/
 dist/
 downloads/
@@ -102,3 +107,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+
+
